// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should be green 1`] = `
<Marker
  coordinate={
    Object {
      "latitude": 50,
      "longitude": 50,
    }
  }
  description="8 bikes available"
  onPress={[Function]}
  title="station"
>
  <View
    style={
      Object {
        "backgroundColor": "green",
        "borderRadius": 10,
        "height": 15,
        "width": 15,
      }
    }
  />
</Marker>
`;

exports[`should be red 1`] = `
<Marker
  coordinate={
    Object {
      "latitude": 50,
      "longitude": 50,
    }
  }
  description="4 bikes available"
  onPress={[Function]}
  title="station"
>
  <View
    style={
      Object {
        "backgroundColor": "red",
        "borderRadius": 10,
        "height": 15,
        "width": 15,
      }
    }
  />
</Marker>
`;
